--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,31 @@
-/* app css stylesheet */
+html, body {
+  padding: 0;
+  margin: 0;
+}
 
-.menu {
+body {
+  padding: 20px;
+}
+
+.feature-list {
+  padding: 0;
+  margin: 0;
+}
+
+.feature-row {
   list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
 }
 
-.menu:before {
-  content: "[";
+.feature-title {
+  margin-bottom: 0;
 }
 
-.menu:after {
-  content: "]";
+.feature-desc, .feature-links {
+  margin: 0;
 }
 
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
+.feature-link-span:after {
+  content: ", ";
+  margin-left: -4px;
   padding: 0;
 }
