--- a/app/app.css
+++ b/app/app.css
@@ -14,14 +14,28 @@ body {
 
 .feature-row {
   list-style: none;
+  background: white;
+  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+  padding: 10px;
+  margin: 20px 0;
+  border-radius: 5px;
 }
 
-.feature-title {
-  margin-bottom: 0;
-}
-
-.feature-desc, .feature-links {
+.feature-title, .feature-desc, .feature-links, .feature-comment {
   margin: 0;
+}
+
+.feature-links {
+  font-size: 12px;
+}
+
+.feature-comment {
+  background: rgb(245, 241, 162);
+  border-radius: 5px;
+  padding: 5px 10px 4px;
+  font-size: 14px;
+  margin: 5px 0 10px;
+  display: inline-block;
 }
 
 .feature-link-span:after {
