--- a/app/app.css
+++ b/app/app.css
@@ -7,6 +7,15 @@ body {
   padding: 20px;
 }
 
+a {
+  text-decoration: none;
+  color: rgb(0, 96, 226);
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 .feature-list {
   padding: 0;
   margin: 0;
@@ -14,11 +23,8 @@ body {
 
 .feature-row {
   list-style: none;
-  background: white;
-  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
-  padding: 10px;
-  margin: 20px 0;
-  border-radius: 5px;
+  padding: 20px 10px;
+  border-bottom: 1px solid #ddd;
 }
 
 .feature-title, .feature-desc, .feature-links, .feature-comment {
@@ -30,7 +36,7 @@ body {
 }
 
 .feature-comment {
-  background: rgb(245, 241, 162);
+  background: rgb(255, 246, 0);
   border-radius: 5px;
   padding: 5px 10px 4px;
   font-size: 14px;
